--- a/config/sys.config
+++ b/config/sys.config
@@ -1,2 +1,10 @@
 %% -*- erlang -*-
-[].
+[
+    {blockchain, [
+        {port, 2154},
+        {seed_nodes, "/ip4/34.222.64.221/tcp/2154,/ip4/34.208.255.251/tcp/2154"},
+        {base_dir, "/var/data"},
+        {update_dir, "/opt/packet_purchaser/update"}
+    ]},
+    {libp2p, [{max_tcp_connections, 50000}]}
+].
