--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,9 @@
 ]}.
 
 {deps, [
-    {lager, "3.8.1"}
+    {lager, "3.8.1"},
+    {observer_cli, "1.6.0"},
+    {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}}
 ]}.
 
 {plugins, [rebar3_format, erlfmt]}.
