--- a/config/sys.config
+++ b/config/sys.config
@@ -4,7 +4,13 @@
         {port, 2154},
         {seed_nodes, "/ip4/34.222.64.221/tcp/2154,/ip4/34.208.255.251/tcp/2154"},
         {base_dir, "/var/data"},
-        {update_dir, "/opt/packet_purchaser/update"}
+        {update_dir, "/opt/packet_purchaser/update"},
+        {honor_quick_sync, true},
+        {quick_sync_mode, blessed_snapshot},
+        {blessed_snapshot_block_height, 583201},
+        {blessed_snapshot_block_hash,
+            <<118, 167, 69, 0, 64, 215, 38, 50, 120, 201, 248, 84, 243, 97, 247, 71, 177, 40, 241,
+                14, 3, 246, 89, 135, 84, 2, 116, 250, 181, 136, 35, 190>>}
     ]},
     {libp2p, [{max_tcp_connections, 50000}]}
 ].
