Add blockchain core CLI

--- a/rebar.config
+++ b/rebar.config
@@ -39,5 +39,29 @@
     {sys_config, "config/sys.config"},
     {sys_config_src, "config/sys.config.src"},
     {extended_start_script, true},
-    {include_src, true}
+    {overlay, [
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/peer", "bin/extensions/peer"},
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/snapshot",
+            "bin/extensions/snapshot"},
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/ledger",
+            "bin/extensions/ledger"},
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/trace", "bin/extensions/trace"},
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/txn", "bin/extensions/txn"},
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/repair", "bin/extensions/repair"}
+    ]},
+    {extended_start_script_hooks, [
+        {post_start, [
+            {wait_for_process, blockchain_worker}
+        ]}
+    ]},
+    {generate_start_script, true},
+    {extended_start_script, true},
+    {extended_start_script_extensions, [
+        {peer, "extensions/peer"},
+        {snapshot, "extensions/snapshot"},
+        {ledger, "extensions/ledger"},
+        {trace, "extensions/trace"},
+        {txn, "extensions/txn"},
+        {repair, "extensions/repair"}
+    ]}
 ]}.
