--- a/rebar.config
+++ b/rebar.config
@@ -47,7 +47,9 @@
             "bin/extensions/ledger"},
         {copy, "./_build/default/lib/blockchain/scripts/extensions/trace", "bin/extensions/trace"},
         {copy, "./_build/default/lib/blockchain/scripts/extensions/txn", "bin/extensions/txn"},
-        {copy, "./_build/default/lib/blockchain/scripts/extensions/repair", "bin/extensions/repair"}
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/repair",
+            "bin/extensions/repair"},
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/sc", "bin/extensions/sc"}
     ]},
     {extended_start_script_hooks, [
         {post_start, [
@@ -62,6 +64,7 @@
         {ledger, "extensions/ledger"},
         {trace, "extensions/trace"},
         {txn, "extensions/txn"},
-        {repair, "extensions/repair"}
+        {repair, "extensions/repair"},
+        {sc, "extensions/sc"}
     ]}
 ]}.
