Add basic state channel packet handler

--- a/config/sys.config
+++ b/config/sys.config
@@ -10,7 +10,8 @@
         {blessed_snapshot_block_height, 583201},
         {blessed_snapshot_block_hash,
             <<118, 167, 69, 0, 64, 215, 38, 50, 120, 201, 248, 84, 243, 97, 247, 71, 177, 40, 241,
-                14, 3, 246, 89, 135, 84, 2, 116, 250, 181, 136, 35, 190>>}
+                14, 3, 246, 89, 135, 84, 2, 116, 250, 181, 136, 35, 190>>},
+        {sc_packet_handler, packet_purchaser_sc_packet_handler}
     ]},
     {libp2p, [{max_tcp_connections, 50000}]}
 ].
