--- a/config/sys.config
+++ b/config/sys.config
@@ -11,7 +11,8 @@
         {blessed_snapshot_block_hash,
             <<118, 167, 69, 0, 64, 215, 38, 50, 120, 201, 248, 84, 243, 97, 247, 71, 177, 40, 241,
                 14, 3, 246, 89, 135, 84, 2, 116, 250, 181, 136, 35, 190>>},
-        {sc_packet_handler, packet_purchaser_sc_packet_handler}
+        {sc_packet_handler, packet_purchaser_sc_packet_handler},
+        {packet_purchaser_connector_udp_pool, [{address, {127, 0, 0, 1}}, {port, 1680}]}
     ]},
     {libp2p, [{max_tcp_connections, 50000}]}
 ].
