--- a/rebar.config
+++ b/rebar.config
@@ -8,6 +8,7 @@
     {lager, "3.8.1"},
     {observer_cli, "1.6.0"},
     {jsx, "3.0.0"},
+    {poolboy, "1.5.2"},
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}}
 ]}.
