--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -1,25 +1,44 @@
-name: Erlang CI
+name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: master
+    tags: '*'
   pull_request:
-    branches: [ master ]
+    branches: master
 
 jobs:
-  build:
+  CI:
     runs-on: ubuntu-latest
     container:
-      image: erlang:22.0.7
+      image: heliumsystems/builder-erlang:1
     steps:
-    - uses: actions/checkout@v2
-    - name: Install libs
-      run: apt-get update && apt-get install -y curl autoconf automake libtool flex bison libgmp-dev cmake build-essential emacs-nox libssl-dev
-    - name: Install Rust
-      run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs > rust.sh && chmod +x rust.sh && ./rust.sh -y
-    - name: Install libsodium
-      run: git clone -b stable https://github.com/jedisct1/libsodium.git && cd libsodium && ./configure --prefix=/usr && make check && make install && cd ..
-    - name: Compile
-      run: make
-    - name: Run tests
-      run: make test
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+
+      - name: Build
+        env:
+          SANITIZE_ERLANG_NIFS: 1
+        run: rebar3 compile
+
+      - name: Run CT tests
+        env:
+          # We turn off leak detection to reduce noise from leaking
+          # processes that rebar exec()s before it actually runs the
+          # tests.
+          ASAN_OPTIONS: detect_leaks=0
+        run: LD_PRELOAD="$(cc --print-file libasan.so)" rebar3 ct
+
+      - name: Run EUnit tests
+        env:
+          ASAN_OPTIONS: detect_leaks=0
+        run: LD_PRELOAD="$(cc --print-file libasan.so)" rebar3 eunit
+
+      - name: Check formatting
+        run: rebar3 fmt --check
+
+      - name: Run Dialyzer
+        run: rebar3 dialyzer
