Trim down erlfmt config

--- a/rebar.config
+++ b/rebar.config
@@ -13,21 +13,12 @@
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}}
 ]}.
 
-{plugins, [rebar3_format, erlfmt]}.
+{plugins, [erlfmt]}.
 
-{format, [
-    {files, [
-        "src/**/*.erl",
-        "include/*.hrl",
-        "packet_purchaser.app.src",
-        "test/**/*.erl",
-        "test/**/*.hrl",
-        "config/sys.config",
-        "config/sys.config.src"
-    ]},
-    {ignore, []},
-    {formatter, erlfmt_formatter},
-    {options, #{print_width => 100, ignore_pragma => true}}
+{erlfmt, [
+    {files, "rebar.config"},
+    {files, "{src,include,test}/*.{hrl,erl,app.src}"},
+    {files, "test/utils/*.{hrl,erl}"}
 ]}.
 
 {xref_checks, [
