--- a/rebar.config
+++ b/rebar.config
@@ -13,12 +13,17 @@
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}}
 ]}.
 
-{plugins, [erlfmt]}.
+{plugins, [rebar3_format, erlfmt]}.
 
-{erlfmt, [
-    {files, "rebar.config"},
-    {files, "{src,include,test}/*.{hrl,erl,app.src}"},
-    {files, "test/utils/*.{hrl,erl}"}
+{format, [
+    {files, [
+        "rebar.config",
+        "{src,include,test}/*.{hrl,erl,app.src}",
+        "config/sys.{config,config.src}"
+    ]},
+    {ignore, []},
+    {formatter, erlfmt_formatter},
+    {options, #{print_width => 100, ignore_pragma => true}}
 ]}.
 
 {xref_checks, [
