--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -22,7 +22,21 @@ jobs:
       - name: Build
         env:
           SANITIZE_ERLANG_NIFS: 1
-        run: rebar3 compile
+        run: ./rebar3 compile
+      
+      - name: Check formatting
+        run: ./rebar3 fmt --verbose --check rebar.config && rebar3 fmt --verbose --check "{src,include,test}/**/*.{hrl,erl,app.src}" && rebar3 fmt --verbose --check "config/sys.{config,config.src}"
+      
+      - name: Run xref
+        run: ./rebar3 xref
+
+      - name: Run Dialyzer
+        run: ./rebar3 dialyzer
+
+      - name: Run EUnit tests
+        env:
+          ASAN_OPTIONS: detect_leaks=0
+        run: LD_PRELOAD="$(cc --print-file libasan.so)" ./rebar3 eunit
 
       - name: Run CT tests
         env:
@@ -30,15 +44,4 @@ jobs:
           # processes that rebar exec()s before it actually runs the
           # tests.
           ASAN_OPTIONS: detect_leaks=0
-        run: LD_PRELOAD="$(cc --print-file libasan.so)" rebar3 ct
-
-      - name: Run EUnit tests
-        env:
-          ASAN_OPTIONS: detect_leaks=0
-        run: LD_PRELOAD="$(cc --print-file libasan.so)" rebar3 eunit
-
-      - name: Check formatting
-        run: rebar3 fmt --check
-
-      - name: Run Dialyzer
-        run: rebar3 dialyzer
+        run: LD_PRELOAD="$(cc --print-file libasan.so)" ./rebar3 ct
