--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,7 @@
 {format, [
     {files, [
         "rebar.config",
-        "{src,include,test}/*.{hrl,erl,app.src}",
+        "{src,include,test}/**/*.{hrl,erl,app.src}",
         "config/sys.{config,config.src}"
     ]},
     {ignore, []},
