--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,8 @@
     {jsx, "3.0.0"},
     {poolboy, "1.5.2"},
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
-    {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}}
+    {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
+    {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}}
 ]}.
 
 {plugins, [rebar3_format, erlfmt]}.
