Create one udp worker per gateway

--- a/config/sys.config
+++ b/config/sys.config
@@ -14,5 +14,36 @@
         {sc_packet_handler, packet_purchaser_sc_packet_handler},
         {packet_purchaser_connector_udp_pool, [{address, {127, 0, 0, 1}}, {port, 1680}]}
     ]},
-    {libp2p, [{max_tcp_connections, 50000}]}
+    {libp2p, [{max_tcp_connections, 50000}]},
+    {lager, [
+        {suppress_supervisor_start_stop, true},
+        {log_root, "/var/data/log/packet_purchaser"},
+        {crash_log, "crash.log"},
+        {colored, true},
+        {handlers, [
+            {lager_file_backend, [
+                {file, "info.log"},
+                {level, info},
+                {formatter_config, [
+                    "[",
+                    date,
+                    " ",
+                    time,
+                    "] ",
+                    pid,
+                    " [",
+                    severity,
+                    "]",
+                    {gateway_id, [" [", gateway_id, "]"], ""},
+                    " [",
+                    {module, ""},
+                    {function, [":", function], ""},
+                    {line, [":", line], ""},
+                    "] ",
+                    message,
+                    "\n"
+                ]}
+            ]}
+        ]}
+    ]}
 ].
