--- a/config/sys.config
+++ b/config/sys.config
@@ -1,5 +1,8 @@
 %% -*- erlang -*-
 [
+    {packet_purchaser, [
+        {packet_purchaser_udp_worker, [{address, {127, 0, 0, 1}}, {port, 1680}]}
+    ]},
     {blockchain, [
         {port, 2154},
         {seed_nodes, "/ip4/34.222.64.221/tcp/2154,/ip4/34.208.255.251/tcp/2154"},
@@ -11,8 +14,7 @@
         {blessed_snapshot_block_hash,
             <<118, 167, 69, 0, 64, 215, 38, 50, 120, 201, 248, 84, 243, 97, 247, 71, 177, 40, 241,
                 14, 3, 246, 89, 135, 84, 2, 116, 250, 181, 136, 35, 190>>},
-        {sc_packet_handler, packet_purchaser_sc_packet_handler},
-        {packet_purchaser_connector_udp_pool, [{address, {127, 0, 0, 1}}, {port, 1680}]}
+        {sc_packet_handler, packet_purchaser_sc_packet_handler}
     ]},
     {libp2p, [{max_tcp_connections, 50000}]},
     {lager, [
