Add simple LNS for testing

--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,8 @@
 %% -*- erlang -*-
 [
     {packet_purchaser, [
-        {packet_purchaser_udp_worker, [{address, {127, 0, 0, 1}}, {port, 1680}]}
+        {packet_purchaser_udp_worker, [{address, {127, 0, 0, 1}}, {port, 1680}]},
+        {packet_purchaser_simple_lns, false}
     ]},
     {blockchain, [
         {port, 2154},
