--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,7 @@
 %% -*- erlang -*-
 [
     {packet_purchaser, [
-        {packet_purchaser_udp_worker, [{address, {127, 0, 0, 1}}, {port, 1680}]},
+        {packet_purchaser_udp_worker, [{address, "127.0.0.1"}, {port, 1700}]},
         {packet_purchaser_simple_lns, false}
     ]},
     {blockchain, [
