--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -8,3 +8,5 @@ services:
       - ./data:/var/data
     environment:
       - PP_BASE_DIR=/var/data
+      - PP_LNS_ADDRESS=127.0.0.1
+      - PP_LNS_PORT=1700
