--- a/config/test.config
+++ b/config/test.config
@@ -1,28 +1,18 @@
 [
     {packet_purchaser, [
-        {oui, "${PP_OUI}"},
+        {oui, 1},
         {packet_purchaser_udp_worker, [
-            {address, "${PP_LNS_ADDRESS}"},
-            {port, "${PP_LNS_PORT}"}
+            {address, "127.0.0.1"},
+            {port, 1700},
+            {pull_data_timer, 2000}
         ]}
     ]},
     {blockchain, [
-        {port, 2154},
-        {seed_nodes, "/ip4/34.222.64.221/tcp/2154,/ip4/34.208.255.251/tcp/2154"},
-        {base_dir, "${PP_BASE_DIR}"},
-        {update_dir, "update"},
-        {honor_quick_sync, true},
-        {quick_sync_mode, blessed_snapshot},
-        {blessed_snapshot_block_height, 642961},
-        {blessed_snapshot_block_hash,
-            <<213, 216, 64, 169, 119, 157, 209, 112, 77, 143, 249, 60, 59, 237, 142, 170, 255, 100,
-                183, 105, 232, 58, 104, 10, 134, 30, 63, 135, 140, 222, 211, 65>>},
-        {sc_packet_handler, packet_purchaser_sc_packet_handler}
+        {port, 2154}
     ]},
-    {libp2p, [{max_tcp_connections, 50000}]},
     {lager, [
         {suppress_supervisor_start_stop, true},
-        {log_root, "${PP_BASE_DIR}/log"},
+        {log_root, "log"},
         {crash_log, "crash.log"},
         {handlers, [
             {lager_file_backend, [
