--- a/rebar.config
+++ b/rebar.config
@@ -13,15 +13,18 @@
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}}
 ]}.
 
-{plugins, [rebar3_format, erlfmt]}.
+{plugins, [
+    {rebar3_format, "0.8.2"},
+    {erlfmt, "0.10.0"}
+]}.
 
 {format, [
+    {ignore, []},
     {files, [
         "rebar.config",
         "{src,include,test}/**/*.{hrl,erl,app.src}",
-        "config/sys.{config,config.src}"
+        "config/{sys,test}.{config,config.src}"
     ]},
-    {ignore, []},
     {formatter, erlfmt_formatter},
     {options, #{print_width => 100, ignore_pragma => true}}
 ]}.
@@ -39,6 +42,7 @@
     {sys_config_src, "config/sys.config.src"},
     {extended_start_script, true},
     {overlay, [
+        {copy, "priv/genesis", "update/genesis"},
         {copy, "./_build/default/lib/blockchain/scripts/extensions/peer", "bin/extensions/peer"},
         {copy, "./_build/default/lib/blockchain/scripts/extensions/snapshot",
             "bin/extensions/snapshot"},
@@ -67,3 +71,5 @@
         {sc, "extensions/sc"}
     ]}
 ]}.
+
+{ct_opts, [{sys_config, "config/test.config"}]}.
