--- a/config/sys.config
+++ b/config/sys.config
@@ -1,13 +1,13 @@
-%% -*- erlang -*-
 [
     {packet_purchaser, [
-        {packet_purchaser_udp_worker, [{address, "127.0.0.1"}, {port, 1700}]},
-        {packet_purchaser_simple_lns, false}
+        {oui, 1},
+        {packet_purchaser_udp_worker, [{address, "127.0.0.1"}, {port, 1700}]}
     ]},
     {blockchain, [
         {port, 2154},
         {seed_nodes, "/ip4/34.222.64.221/tcp/2154,/ip4/34.208.255.251/tcp/2154"},
         {base_dir, "/var/data"},
+        {update_dir, "update"},
         {honor_quick_sync, true},
         {quick_sync_mode, blessed_snapshot},
         {blessed_snapshot_block_height, 642961},
@@ -50,7 +50,10 @@
             ]}
         ]},
         {traces, [
-            {{lager_file_backend, "packet_purchaser.log"}, [{application, packet_purchaser}], debug}
+            {{lager_file_backend, "packet_purchaser.log"}, [{application, packet_purchaser}],
+                debug},
+            {{lager_file_backend, "packet_purchaser.log"},
+                [{module, packet_purchaser_sc_packet_handler}], debug}
         ]}
     ]}
 ].
