--- a/config/sys.config
+++ b/config/sys.config
@@ -22,6 +22,28 @@
         {log_root, "/var/data/log"},
         {crash_log, "crash.log"},
         {handlers, [
+            {lager_console_backend, [
+                {level, warning},
+                {formatter_config, [
+                    "[",
+                    date,
+                    " ",
+                    time,
+                    "] ",
+                    pid,
+                    " [",
+                    severity,
+                    "]",
+                    {gateway_id, [" [", device_id, "]"], ""},
+                    " [",
+                    {module, ""},
+                    {function, [":", function], ""},
+                    {line, [":", line], ""},
+                    "] ",
+                    message,
+                    "\n"
+                ]}
+            ]},
             {lager_file_backend, [
                 {file, "packet_purchaser.log"},
                 {level, warning},
@@ -50,6 +72,8 @@
             ]}
         ]},
         {traces, [
+            {lager_console_backend, [{application, packet_purchaser}], debug},
+            {lager_console_backend, [{module, packet_purchaser_sc_packet_handler}], debug},
             {{lager_file_backend, "packet_purchaser.log"}, [{application, packet_purchaser}],
                 debug},
             {{lager_file_backend, "packet_purchaser.log"},
