--- a/config/sys.config
+++ b/config/sys.config
@@ -34,7 +34,7 @@
                     " [",
                     severity,
                     "]",
-                    {gateway_id, [" [", device_id, "]"], ""},
+                    {gateway_id, [" [", gateway_id, "]"], ""},
                     " [",
                     {module, ""},
                     {function, [":", function], ""},
