Rename files, getting too long

--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,7 @@
 [
     {packet_purchaser, [
         {oui, 1},
-        {packet_purchaser_udp_worker, [{address, "127.0.0.1"}, {port, 1700}]}
+        {pp_udp_worker, [{address, "127.0.0.1"}, {port, 1700}]}
     ]},
     {blockchain, [
         {port, 2154},
@@ -14,7 +14,7 @@
         {blessed_snapshot_block_hash,
             <<213, 216, 64, 169, 119, 157, 209, 112, 77, 143, 249, 60, 59, 237, 142, 170, 255, 100,
                 183, 105, 232, 58, 104, 10, 134, 30, 63, 135, 140, 222, 211, 65>>},
-        {sc_packet_handler, packet_purchaser_sc_packet_handler}
+        {sc_packet_handler, pp_sc_packet_handler}
     ]},
     {libp2p, [{max_tcp_connections, 50000}]},
     {lager, [
@@ -73,11 +73,10 @@
         ]},
         {traces, [
             {lager_console_backend, [{application, packet_purchaser}], debug},
-            {lager_console_backend, [{module, packet_purchaser_sc_packet_handler}], debug},
+            {lager_console_backend, [{module, pp_sc_packet_handler}], debug},
             {{lager_file_backend, "packet_purchaser.log"}, [{application, packet_purchaser}],
                 debug},
-            {{lager_file_backend, "packet_purchaser.log"},
-                [{module, packet_purchaser_sc_packet_handler}], debug}
+            {{lager_file_backend, "packet_purchaser.log"}, [{module, pp_sc_packet_handler}], debug}
         ]}
     ]}
 ].
