--- a/config/test.config
+++ b/config/test.config
@@ -1,7 +1,7 @@
 [
     {packet_purchaser, [
         {oui, 1},
-        {packet_purchaser_udp_worker, [
+        {pp_udp_worker, [
             {address, "127.0.0.1"},
             {port, 1700},
             {pull_data_timer, 2000}
@@ -45,8 +45,7 @@
         {traces, [
             {{lager_file_backend, "packet_purchaser.log"}, [{application, packet_purchaser}],
                 debug},
-            {{lager_file_backend, "packet_purchaser.log"},
-                [{module, packet_purchaser_sc_packet_handler}], debug}
+            {{lager_file_backend, "packet_purchaser.log"}, [{module, pp_sc_packet_handler}], debug}
         ]}
     ]}
 ].
