Include xor filter worker and basic chirpstack integration

--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,8 @@
 [
     {packet_purchaser, [
         {oui, 1},
-        {pp_udp_worker, [{address, "127.0.0.1"}, {port, 1700}]}
+        {pp_udp_worker, [{address, "127.0.0.1"}, {port, 1700}]},
+        {pp_xor_filter_worker, false}
     ]},
     {blockchain, [
         {port, 2154},
