--- a/config/test.config
+++ b/config/test.config
@@ -5,7 +5,8 @@
             {address, "127.0.0.1"},
             {port, 1700},
             {pull_data_timer, 2000}
-        ]}
+        ]},
+        {pp_xor_filter_worker, true}
     ]},
     {blockchain, [
         {port, 2154}
