--- a/rebar.config
+++ b/rebar.config
@@ -35,6 +35,17 @@
     locals_not_used
 ]}.
 
+{profiles, [
+    {test, [
+        {overrides, [
+            {add, blockchain, [{erl_opts, [{d, 'TEST'}]}]}
+        ]},
+        {deps, [
+            {meck, "0.9.0"}
+        ]}
+    ]}
+]}.
+
 {relx, [
     {release, {"packet_purchaser", "1.0.0"}, [packet_purchaser]},
     {vm_args, "config/vm.args"},
