Finish chripstack integration

--- a/.env-template
+++ b/.env-template
@@ -7,3 +7,12 @@ PP_OUI=999
 # Default LNS Address and port
 PP_LNS_ADDRESS=127.0.0.1
 PP_LNS_PORT=1700
+
+# Enable xor filter worker (or not)
+PP_ENABLE_XOR_FILTER=false
+
+# Chripstack integration config
+PP_CHIRPSTACK_ENPOINT=http://localhost:8080
+PP_CHIRPSTACK_APP_ID=1
+PP_CHIRPSTACK_API_KEY=XXXXXX
+PP_CHIRPSTACK_APP_EUI=0000000000000000
