--- a/config/sys.config
+++ b/config/sys.config
@@ -2,7 +2,14 @@
     {packet_purchaser, [
         {oui, 1},
         {pp_udp_worker, [{address, "127.0.0.1"}, {port, 1700}]},
-        {pp_xor_filter_worker, false}
+        {pp_xor_filter_worker, false},
+        {pp_integration, pp_integration_chirpstack},
+        {pp_integration_chirpstack, [
+            {endpoint, "http://localhost:8080"},
+            {app_id, "1"},
+            {api_key, "XXX"},
+            {app_eui, "0000000000000000"}
+        ]}
     ]},
     {blockchain, [
         {port, 2154},
