--- a/rebar.config
+++ b/rebar.config
@@ -8,9 +8,10 @@
     {lager, "3.8.1"},
     {observer_cli, "1.6.0"},
     {jsx, "3.0.0"},
-    {blockchain, {git, "https://github.com/helium/blockchain-core.git", {tag, "2020.12.15.2"}}},
+    {blockchain, {git, "https://github.com/helium/blockchain-core.git", {tag, "2021.02.12.0"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
-    {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}}
+    {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
+    {hackney, "1.17.0"}
 ]}.
 
 {plugins, [
