--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
 ]}.
 
 {deps, [
+    {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "v1.1.1"}}},
     {lager, "3.8.1"},
     {observer_cli, "1.6.0"},
     {jsx, "3.0.0"},
