add chirpstack fakery to test config so we can run tests

--- a/config/test.config
+++ b/config/test.config
@@ -6,7 +6,14 @@
             {port, 1700},
             {pull_data_timer, 2000}
         ]},
-        {pp_xor_filter_worker, true}
+        {pp_xor_filter_worker, true},
+        {pp_integration, pp_integration_chirpstack},
+        {pp_integration_chirpstack, [
+            {endpoint, "http://localhost:8080"},
+            {app_id, "1"},
+            {api_key, "XXX"},
+            {app_eui, "0000000000000000"}
+        ]}
     ]},
     {blockchain, [
         {port, 2154}
