Add optoins to .env-template

--- a/.env-template
+++ b/.env-template
@@ -16,3 +16,14 @@ PP_CHIRPSTACK_ENPOINT=http://localhost:8080
 PP_CHIRPSTACK_APP_ID=1
 PP_CHIRPSTACK_API_KEY=XXXXXX
 PP_CHIRPSTACK_APP_EUI=0000000000000000
+
+## PP_ALLOW_JOINS set to false will ignore ALL join packets (default: true)
+PP_ALLOW_JOINS=true
+
+## Net IDs filters.
+## When left blank, no filtering will be performed. (default: [])
+##
+## Example:
+## PP_NET_IDS = [16#000022, 16#000013]
+##
+PP_NET_IDS=[]
