update handling net ids
have default empty list in template, then splice env in there.

--- a/.env-template
+++ b/.env-template
@@ -21,9 +21,11 @@ PP_CHIRPSTACK_APP_EUI=0000000000000000
 PP_ALLOW_JOINS=true
 
 ## Net IDs filters.
-## When left blank, no filtering will be performed. (default: [])
+## When left blank, no filtering will be performed. (default: allow_all)
 ##
 ## Example:
-## PP_NET_IDS = [16#000022, 16#000013]
+## PP_NET_IDS=16#000022, 16#000013
 ##
-PP_NET_IDS=[]
+## Note: Numbers will be interpreted as base-16
+##
+PP_NET_IDS=allow_all
