--- a/config/sys.config
+++ b/config/sys.config
@@ -9,7 +9,9 @@
             {app_id, "1"},
             {api_key, "XXX"},
             {app_eui, "0000000000000000"}
-        ]}
+        ]},
+        {accept_joins, true},
+        {net_ids, []}
     ]},
     {blockchain, [
         {port, 2154},
