Add state channel config to env template

--- a/.env-template
+++ b/.env-template
@@ -4,6 +4,12 @@ PP_BASE_DIR=/var/data
 # OUI used by packet purchaser (see https://developer.helium.com/blockchain/blockchain-cli#oui)
 PP_OUI=999
 
+# DC amount to open State Channels with (default: 100)
+PP_SC_OPEN_DC_AMOUNT=100
+
+# Number of blocks to expire State Channels (default: 25)
+ROUTER_SC_EXPIRATION_INTERVAL=25
+
 # Default LNS Address and port
 PP_LNS_ADDRESS=127.0.0.1
 PP_LNS_PORT=1700
