--- a/config/test.config
+++ b/config/test.config
@@ -13,7 +13,11 @@
             {app_id, "1"},
             {api_key, "XXX"},
             {app_eui, "0000000000000000"}
-        ]}
+        ]},
+        {accept_joins, true},
+        {net_ids, []},
+        {sc_open_dc_amount, 100},
+        {sc_expiration_interval, 25}
     ]},
     {blockchain, [
         {port, 2154}
