update gateway settings
- thanks vihu

--- a/config/sys.config
+++ b/config/sys.config
@@ -26,7 +26,10 @@
         {blessed_snapshot_block_hash,
             <<87, 114, 184, 61, 46, 56, 30, 199, 91, 120, 96, 142, 45, 46, 121, 203, 28, 202, 253,
                 126, 205, 120, 12, 208, 14, 59, 144, 15, 104, 210, 246, 217>>},
-        {sc_packet_handler, pp_sc_packet_handler}
+        {sc_packet_handler, pp_sc_packet_handler},
+        {disable_gateway_cache, true},
+        {gw_cache_retention_limit, 0},
+        {gw_context_cache_max_size, 0}
     ]},
     {libp2p, [{max_tcp_connections, 50000}]},
     {lager, [
