--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
 ]}.
 
 {deps, [
+    {clique, ".*", {git, "https://github.com/helium/clique.git", {branch, "develop"}}},
     {lager, "3.8.1"},
     {observer_cli, "1.6.0"},
     {jsx, "3.0.0"},
