Continue metrics on start and dump to disk on stop

--- a/.env-template
+++ b/.env-template
@@ -1,6 +1,10 @@
 # Default data directory
 PP_BASE_DIR=/var/data
 
+# Where to store counts.
+# NOTE: Appended to PP_BASE_DIR/
+PP_METRICS_FILE=pp_metrics.dat
+
 # OUI used by packet purchaser (see https://developer.helium.com/blockchain/blockchain-cli#oui)
 PP_OUI=999
 
