--- a/config/sys.config
+++ b/config/sys.config
@@ -13,7 +13,8 @@
         {accept_joins, true},
         {net_ids, []},
         {sc_open_dc_amount, 100},
-        {sc_expiration_interval, 25}
+        {sc_expiration_interval, 25},
+        {pp_metrics_file, "/var/data/pp_metrics.dat"}
     ]},
     {blockchain, [
         {port, 2154},
