--- a/config/sys.config
+++ b/config/sys.config
@@ -11,6 +11,7 @@
             {app_eui, "0000000000000000"}
         ]},
         {accept_joins, true},
+        {join_net_ids, #{}},
         {net_ids, []},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
