use atom for updated version of rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -50,7 +50,7 @@
 ]}.
 
 {relx, [
-    {release, {"packet_purchaser", "1.0.0"}, [packet_purchaser]},
+    {release, {packet_purchaser, "1.0.0"}, [packet_purchaser]},
     {vm_args, "config/vm.args"},
     {sys_config, "config/sys.config"},
     {sys_config_src, "config/sys.config.src"},
