Update with sc worker with changes from router
- Adds ability to separate state channel closing

--- a/.env-template
+++ b/.env-template
@@ -14,6 +14,11 @@ PP_SC_OPEN_DC_AMOUNT=100
 # Number of blocks to expire State Channels (default: 25)
 PP_SC_EXPIRATION_INTERVAL=25
 
+# State Channel Expiration Buffer
+# Minimum distance state channels can expire within another expiration
+# default: 15 when not set
+PP_SC_EXPIRATION_BUFFER=15
+
 # Default LNS Address and port
 PP_LNS_ADDRESS=127.0.0.1
 PP_LNS_PORT=1700
