--- a/config/sys.config
+++ b/config/sys.config
@@ -15,6 +15,7 @@
         {net_ids, []},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
+        {sc_expiration_buffer, 15},
         {pp_metrics_file, "/var/data/pp_metrics.dat"}
     ]},
     {blockchain, [
