Limit log to 1G

--- a/config/sys.config
+++ b/config/sys.config
@@ -64,7 +64,7 @@
             {lager_file_backend, [
                 {file, "packet_purchaser.log"},
                 {level, warning},
-                {size, 0},
+                {size, 1000000000},
                 {date, "$D0"},
                 {count, 7},
                 {formatter_config, [
