start up clique handler
- add info for chain questions from router

--- a/rebar.config
+++ b/rebar.config
@@ -66,7 +66,8 @@
         {copy, "./_build/default/lib/blockchain/scripts/extensions/txn", "bin/extensions/txn"},
         {copy, "./_build/default/lib/blockchain/scripts/extensions/repair",
             "bin/extensions/repair"},
-        {copy, "./_build/default/lib/blockchain/scripts/extensions/sc", "bin/extensions/sc"}
+        {copy, "./_build/default/lib/blockchain/scripts/extensions/sc", "bin/extensions/sc"},
+        {copy, "./scripts/extensions/info", "bin/extensions/info"}
     ]},
     {extended_start_script_hooks, [
         {post_start, [
@@ -82,7 +83,8 @@
         {trace, "extensions/trace"},
         {txn, "extensions/txn"},
         {repair, "extensions/repair"},
-        {sc, "extensions/sc"}
+        {sc, "extensions/sc"},
+        {info, "extensions/info"}
     ]}
 ]}.
 
