--- a/rebar.config
+++ b/rebar.config
@@ -6,11 +6,10 @@
 
 {deps, [
     {clique, ".*", {git, "https://github.com/helium/clique.git", {branch, "develop"}}},
-    {lager, "3.8.1"},
     {observer_cli, "1.6.0"},
-    {jsx, "3.0.0"},
+    {jsx, {git, "https://github.com/lthiery/jsx", {branch, "master"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
-    {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
+    {blockchain, {git, "https://github.com/helium/blockchain-core.git", {tag, "2021.09.16.1"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
     {hackney, "1.17.0"}
