--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
 {deps, [
     {clique, ".*", {git, "https://github.com/helium/clique.git", {branch, "develop"}}},
     {observer_cli, "1.6.0"},
-    {jsx, {git, "https://github.com/lthiery/jsx", {branch, "master"}}},
+    {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {tag, "2021.09.16.1"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
