--- a/rebar.config
+++ b/rebar.config
@@ -12,6 +12,8 @@
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
+    {prometheus, "4.6.0"},
+    {elli, "3.3.0"},
     {hackney, "1.17.0"}
 ]}.
 
