--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -2,9 +2,13 @@ global:
   scrape_interval: 10s
   evaluation_interval: 10s
   external_labels:
-    server: local-packet-purchser
+    server: packet-purchaser
 
 scrape_configs:
   - job_name: packet_purchaser
     static_configs:
       - targets: ['localhost:3000']
+
+  - job_name: node
+    static_configs:
+      - targets: ['localhost:9100']
