update configs for routing config file

--- a/.env-template
+++ b/.env-template
@@ -27,3 +27,6 @@ PP_CHIRPSTACK_ENPOINT=http://localhost:8080
 PP_CHIRPSTACK_APP_ID=1
 PP_CHIRPSTACK_API_KEY=XXXXXX
 PP_CHIRPSTACK_APP_EUI=0000000000000000
+
+# Appended to PP_BASE_DIR to locate the routing config JSON file
+PP_ROUTING_CONFIG_FILE=routing_config.json
