--- a/config/sys.config
+++ b/config/sys.config
@@ -10,13 +10,12 @@
             {api_key, "XXX"},
             {app_eui, "0000000000000000"}
         ]},
-        {accept_joins, true},
-        {join_net_ids, #{}},
-        {net_ids, []},
+
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
         {sc_expiration_buffer, 15},
-        {pp_metrics_file, "/var/data/pp_metrics.dat"}
+        {pp_metrics_file, "/var/data/pp_metrics.dat"},
+        {pp_routing_config_file, "/var/data/routing_config.json"}
     ]},
     {blockchain, [
         {port, 2154},
