--- a/config/test.config
+++ b/config/test.config
@@ -14,10 +14,9 @@
             {api_key, "XXX"},
             {app_eui, "0000000000000000"}
         ]},
-        {accept_joins, true},
-        {net_ids, []},
         {sc_open_dc_amount, 100},
-        {sc_expiration_interval, 25}
+        {sc_expiration_interval, 25},
+        {pp_routing_config_filename, testing}
     ]},
     {blockchain, [
         {port, 2154}
