template should at least be a valid config

--- a/config/routing_config_template.json
+++ b/config/routing_config_template.json
@@ -4,7 +4,7 @@
         "name": "0x000009",
         "another_name": 1337
     },
-    "routing": {
+    "routing": [
         {
             "net_id": 1,
             "address": "www.internet.com",
@@ -24,12 +24,12 @@
             "address": "www.internet.com",
             "port": 1337
         }
-    },
-    "joins": {
+    ],
+    "joins": [
         // "net_id" and "net_id_alias" in this section must have a matching entry in "routing"
         {"net_id_alias": "name", "app_eui": "0x0000000000000000", "dev_eui": "0x0000000000000000"},
         {"net_id": 1, "app_eui": 0, "dev_eui": 0},
         // "dev_eui" supports wildcards
         {"net_id": 2, "app_eui": 1337, "dev_eui": "*"}
-    }
+    ]
 }
