mount the config file into var data with docker
symlinking there causes biggo problems

--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -11,3 +11,4 @@ services:
     network_mode: host
     volumes:
       - /var/data:/var/data
+      - ./routing_config.json:/var/data/routing_config.json
