--- a/config/routing_config_template.json
+++ b/config/routing_config_template.json
@@ -1,35 +1,33 @@
 // Hex numbers are strings prefixed with "0x"
-{
-    "net_id_aliases": {
-        "name": "0x000009",
-        "another_name": 1337
+// Required Keys:
+//  - net_id
+//  - address
+//  - port
+//
+// Optional Keys:
+//  - name
+//  - multi_buy
+//  - joins
+[
+    {
+        "name": "org_name",
+        "net_id": "0x000009",
+        "address": "www.internet.com",
+        "port": 1337,
+        "multi_buy": 1,
+        "joins": [
+            {"app_eui": "0x0000000000000000", "dev_eui": "0x0000000000000000"},
+            {"app_eui": 0, "dev_eui": 0},
+            // "dev_eui" supports wildcards
+            {"app_eui": 1337, "dev_eui": "*"}
+        ]
     },
-    "routing": [
-        {
-            "net_id": 1,
-            "address": "www.internet.com",
-            "port": 1337,
-            "multi_buy": 1
-        },
-        // "net_id_alias" can be used in place of "net_id"
-        {
-            "net_id_alias": "name",
-            "address": "www.internet.com",
-            "port": 1337,
-            "multi_buy": 1
-        },
-        // "multi_buy" default is 'unlimited'
-        {
-            "net_id": 1,
-            "address": "www.internet.com",
-            "port": 1337
-        }
-    ],
-    "joins": [
-        // "net_id" and "net_id_alias" in this section must have a matching entry in "routing"
-        {"net_id_alias": "name", "app_eui": "0x0000000000000000", "dev_eui": "0x0000000000000000"},
-        {"net_id": 1, "app_eui": 0, "dev_eui": 0},
-        // "dev_eui" supports wildcards
-        {"net_id": 2, "app_eui": 1337, "dev_eui": "*"}
-    ]
-}
+    // optional "multi_buy" defaults to unlimited packets
+    {
+        "name": "another_org",
+        "net_id": 1337,
+        "address": "www.internet.com",
+        "port": 1111,
+        "joins": []
+    }
+]
