--- a/config/sys.config
+++ b/config/sys.config
@@ -10,13 +10,12 @@
             {api_key, "XXX"},
             {app_eui, "0000000000000000"}
         ]},
-        {accept_joins, true},
-        {join_net_ids, #{}},
-        {net_ids, []},
+
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
         {sc_expiration_buffer, 15},
-        {pp_metrics_file, "/var/data/pp_metrics.dat"}
+        {pp_metrics_file, "/var/data/pp_metrics.dat"},
+        {pp_routing_config_file, "/var/data/routing_config.json"}
     ]},
     {blockchain, [
         {port, 2154},
@@ -40,34 +39,12 @@
         {log_root, "/var/data/log"},
         {crash_log, "crash.log"},
         {handlers, [
-            {lager_console_backend, [
-                {level, warning},
-                {formatter_config, [
-                    "[",
-                    date,
-                    " ",
-                    time,
-                    "] ",
-                    pid,
-                    " [",
-                    severity,
-                    "]",
-                    {gateway_id, [" [", gateway_id, "]"], ""},
-                    " [",
-                    {module, ""},
-                    {function, [":", function], ""},
-                    {line, [":", line], ""},
-                    "] ",
-                    message,
-                    "\n"
-                ]}
-            ]},
             {lager_file_backend, [
                 {file, "packet_purchaser.log"},
                 {level, warning},
                 {size, 1000000000},
                 {date, "$D0"},
-                {count, 7},
+                {count, 15},
                 {formatter_config, [
                     "[",
                     date,
@@ -90,11 +67,8 @@
             ]}
         ]},
         {traces, [
-            {lager_console_backend, [{application, packet_purchaser}], debug},
-            {lager_console_backend, [{module, pp_sc_packet_handler}], debug},
-            {{lager_file_backend, "packet_purchaser.log"}, [{application, packet_purchaser}],
-                debug},
-            {{lager_file_backend, "packet_purchaser.log"}, [{module, pp_sc_packet_handler}], debug}
+            {{lager_file_backend, "packet_purchaser.log"}, [{application, packet_purchaser}], info},
+            {{lager_file_backend, "packet_purchaser.log"}, [{module, pp_sc_packet_handler}], info}
         ]}
     ]}
 ].
