Don't collect every metric under the sun
Our reporting is taking longer than prometheus is willing to wait, let's
see if we can reduce the number of metrics a bit.

--- a/config/sys.config
+++ b/config/sys.config
@@ -34,6 +34,17 @@
         {gw_context_cache_max_size, 0}
     ]},
     {libp2p, [{max_tcp_connections, 50000}]},
+    {prometheus, [
+        {collectors, [
+            prometheus_boolean,
+            prometheus_counter,
+            prometheus_gauge,
+            prometheus_histogram,
+            prometheus_vm_memory_collector,
+            prometheus_vm_system_info_collector
+        ]},
+        {vm_system_info_collector_metrics, [process_count]}
+    ]},
     {lager, [
         {suppress_supervisor_start_stop, true},
         {log_root, "/var/data/log"},
