disable most node-exporter collectors by default

--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -16,8 +16,6 @@ services:
     image: prom/prometheus
     container_name: helium_prometheus
     network_mode: host
-    ports:
-      - "9090:9090"
     volumes:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
   node_exporter:
@@ -25,6 +23,9 @@ services:
     container_name: helium_node_exporter
     command:
       - '--path.rootfs=/host'
+      - "--collector.disable-defaults"
+      - "--collector.filesystem"
+      - "--collector.netstat"
     network_mode: host
     pid: host
     restart: unless-stopped
