allow configuration for testnet

--- a/config/sys.config
+++ b/config/sys.config
@@ -33,7 +33,10 @@
         {gw_cache_retention_limit, 0},
         {gw_context_cache_max_size, 0}
     ]},
-    {libp2p, [{max_tcp_connections, 50000}]},
+    {libp2p, [
+      {network, mainnet},
+      {max_tcp_connections, 50000}
+    ]},
     {prometheus, [
         {collectors, [
             prometheus_boolean,
