get ready for websockets

--- a/config/sys.config
+++ b/config/sys.config
@@ -10,7 +10,10 @@
             {api_key, "XXX"},
             {app_eui, "0000000000000000"}
         ]},
-
+        {pp_console_api, [
+            {ws_endpoint, <<"wss://todo">>},
+            {secret, <<>>}
+        ]},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
         {sc_expiration_buffer, 15},
