--- a/.env-template
+++ b/.env-template
@@ -30,3 +30,7 @@ PP_CHIRPSTACK_APP_EUI=0000000000000000
 
 # Appended to PP_BASE_DIR to locate the routing config JSON file
 PP_ROUTING_CONFIG_FILE=routing_config.json
+
+# Console's connection info (see https://github.com/helium/console)
+PP_CONSOLE_WS_ENDPOINT=ws://helium_roaming:4000/socket/packet_purchaser/websocket
+ROUTER_CONSOLE_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
