--- a/config/sys.config
+++ b/config/sys.config
@@ -22,12 +22,13 @@
         {seed_nodes, "/ip4/35.166.211.46/tcp/2154,/ip4/44.236.95.167/tcp/2154"},
         {base_dir, "/var/data"},
         {update_dir, "update"},
+        {snap_source_base_url, "https://snapshots.helium.wtf/mainnet"},
+        {fetch_latest_from_snap_source, true},
         {honor_quick_sync, true},
         {quick_sync_mode, blessed_snapshot},
-        {blessed_snapshot_block_height, 1059841},
+        {blessed_snapshot_block_height, 1107361},
         {blessed_snapshot_block_hash,
-            <<247, 212, 41, 146, 24, 101, 213, 23, 115, 218, 6, 119, 182, 57, 96, 148, 156, 237,
-                134, 172, 105, 169, 155, 95, 31, 126, 253, 16, 58, 161, 113, 235>>},
+            <<102, 50, 130, 227, 158, 34, 222, 243, 63, 229, 79, 170, 9, 0, 55, 18, 178, 248, 162, 90, 67, 227, 209, 88, 69, 26, 24, 196, 243, 78, 117, 203>>},
         {sc_packet_handler, pp_sc_packet_handler},
         {disable_gateway_cache, true},
         {gw_cache_retention_limit, 0},
