--- a/rebar.config
+++ b/rebar.config
@@ -9,9 +9,7 @@
     {observer_cli, "1.6.0"},
     {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
-    {blockchain,
-        {git, "https://github.com/helium/blockchain-core.git",
-            {branch, "mj/rebase-rebase-rebase-libp2p-update-rebase-rebase-rebase"}}},
+    {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
     {prometheus, "4.6.0"},
