--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,8 @@
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
     {prometheus, "4.8.1"},
     {elli, "3.3.0"},
-    {hackney, "1.17.0"}
+    {hackney, "1.17.0"},
+    {websocket_client, "1.3.0"}
 ]}.
 
 {plugins, [
@@ -45,7 +46,8 @@
             {add, blockchain, [{erl_opts, [{d, 'TEST'}]}]}
         ]},
         {deps, [
-            {meck, "0.9.0"}
+            {meck, "0.9.0"},
+            {elli_websocket, "0.1.1"}
         ]}
     ]}
 ]}.
