Move is_active to sys.config

--- a/.env-template
+++ b/.env-template
@@ -32,5 +32,7 @@ PP_CHIRPSTACK_APP_EUI=0000000000000000
 PP_ROUTING_CONFIG_FILE=routing_config.json
 
 # Console's connection info (see https://github.com/helium/console)
+PP_CONSOLE_ENDPOINT=http://helium_roaming:4000/
 PP_CONSOLE_WS_ENDPOINT=ws://helium_roaming:4000/socket/packet_purchaser/websocket
-ROUTER_CONSOLE_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+PP_CONSOLE_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+PP_ENABLE_CONSOLE=false
