--- a/config/sys.config
+++ b/config/sys.config
@@ -11,8 +11,10 @@
             {app_eui, "0000000000000000"}
         ]},
         {pp_console_api, [
-            {ws_endpoint, <<"wss://todo">>},
-            {secret, <<>>}
+            {endpoint, <<>>},
+            {ws_endpoint, <<>>},
+            {secret, <<>>},
+            {is_active, false}
         ]},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
