Allow configuration for testnet (#63)
* allow configuration for testnet

* format

Co-authored-by: Michael Jeffrey <michaeldjeffrey@gmail.com>

--- a/config/sys.config
+++ b/config/sys.config
@@ -41,7 +41,10 @@
         {gw_context_cache_max_size, 0},
         {sc_sup_type, server}
     ]},
-    {libp2p, [{max_tcp_connections, 50000}]},
+    {libp2p, [
+        {network, mainnet},
+        {max_tcp_connections, 50000}
+    ]},
     {prometheus, [
         {collectors, [
             prometheus_boolean,
