add pull_resp port to configs

--- a/.env-template
+++ b/.env-template
@@ -36,3 +36,6 @@ PP_CONSOLE_ENDPOINT=http://helium_roaming:4000/
 PP_CONSOLE_WS_ENDPOINT=ws://helium_roaming:4000/socket/packet_purchaser/websocket
 PP_CONSOLE_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 PP_ENABLE_CONSOLE=false
+
+# Sending PULL_RESP to this port with special payload to save on ports
+PP_PULL_RESP_PORT=1703
