--- a/config/sys.config
+++ b/config/sys.config
@@ -20,7 +20,8 @@
         {sc_expiration_interval, 25},
         {sc_expiration_buffer, 15},
         {pp_metrics_file, "/var/data/pp_metrics.dat"},
-        {pp_routing_config_file, "/var/data/routing_config.json"}
+        {pp_routing_config_file, "/var/data/routing_config.json"},
+        {pull_resp_port, 1703}
     ]},
     {blockchain, [
         {port, 2154},
