--- a/config/test.config
+++ b/config/test.config
@@ -16,7 +16,8 @@
         ]},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
-        {pp_routing_config_filename, testing}
+        {pp_routing_config_filename, testing},
+        {pull_resp_port, 1703}
     ]},
     {blockchain, [
         {port, 2154}
