--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,9 @@
     {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
+    {libp2p, ".*",
+        {git, "https://github.com/helium/erlang-libp2p.git",
+            {branch, "adt/seed-node-perf-improvements"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
     {prometheus, "4.8.1"},
