use blockchain-core branch with updated code for libp2p

--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,8 @@
     {observer_cli, "1.6.0"},
     {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
-    {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
+    {blockchain,
+        {git, "https://github.com/helium/blockchain-core.git", {branch, "jma/p2p-callbacks"}}},
     {libp2p, ".*",
         {git, "https://github.com/helium/erlang-libp2p.git",
             {branch, "adt/seed-node-perf-improvements"}}},
