add nat_map config

--- a/.env-template
+++ b/.env-template
@@ -36,3 +36,9 @@ PP_CONSOLE_ENDPOINT=http://helium_roaming:4000/
 PP_CONSOLE_WS_ENDPOINT=ws://helium_roaming:4000/socket/packet_purchaser/websocket
 PP_CONSOLE_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 PP_ENABLE_CONSOLE=false
+
+## Keep from being relayed
+PP_NAT_EXTERNAL_IP=unset
+PP_NAT_EXTERNAL_PORT=2154
+PP_NAT_INTERNAL_IP=unset
+PP_NAT_INTERNAL_PORT=2154
