--- a/Dockerfile-CI
+++ b/Dockerfile-CI
@@ -1,5 +1,6 @@
-FROM erlang:22
+FROM erlang:24
 ENV DEBIAN_FRONTEND noninteractive
+
 RUN apt update
 RUN apt-get install -y -q \
         build-essential \
@@ -12,7 +13,8 @@ RUN apt-get install -y -q \
         libtool \
         pkg-config \
         cmake \
-        libsodium-dev
+        libsodium-dev \
+        iproute2
 
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable
 ENV PATH="/root/.cargo/bin:${PATH}"
