fix tests and converge on sane env var name

--- a/config/sys.config
+++ b/config/sys.config
@@ -14,7 +14,7 @@
             {endpoint, <<>>},
             {ws_endpoint, <<>>},
             {secret, <<>>},
-            {is_active, false}
+            {auto_connect, false}
         ]},
         {update_from_ws_config, false},
         {sc_open_dc_amount, 100},
