--- a/.env-template
+++ b/.env-template
@@ -35,7 +35,7 @@ PP_ROUTING_CONFIG_FILE=routing_config.json
 PP_CONSOLE_ENDPOINT=http://helium_roaming:4000/
 PP_CONSOLE_WS_ENDPOINT=ws://helium_roaming:4000/socket/packet_purchaser/websocket
 PP_CONSOLE_SECRET=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-PP_ENABLE_CONSOLE=false
+PP_CONSOLE_ENABLE=false
 PP_CONSOLE_UPDATE_FROM_WS_CONFIG=false
 
 ## Keep from being relayed
