add config for accepting/ignoring config updates from websocket
testing defaults to true, because that is the desired configuration

--- a/config/sys.config
+++ b/config/sys.config
@@ -16,6 +16,7 @@
             {secret, <<>>},
             {is_active, false}
         ]},
+        {update_from_ws_config, false},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
         {sc_expiration_buffer, 15},
