--- a/config/test.config
+++ b/config/test.config
@@ -14,6 +14,7 @@
             {api_key, "XXX"},
             {app_eui, "0000000000000000"}
         ]},
+        {update_from_ws_config, true},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
         {pp_routing_config_filename, testing}
