--- a/config/test.config
+++ b/config/test.config
@@ -17,7 +17,8 @@
         {update_from_ws_config, true},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
-        {pp_routing_config_filename, testing}
+        {pp_routing_config_filename, testing},
+        {http_roaming_port, 3003}
     ]},
     {blockchain, [
         {port, 2154}
