error handling for downlinking
whitelist for expected IPs

--- a/config/test.config
+++ b/config/test.config
@@ -18,7 +18,8 @@
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
         {pp_routing_config_filename, testing},
-        {http_roaming_port, 3003}
+        {http_roaming_port, 3003},
+        {http_roaming_ip_list, "localhost,127.0.0.1"}
     ]},
     {blockchain, [
         {port, 2154}
