--- a/rebar.config
+++ b/rebar.config
@@ -71,7 +71,8 @@
         {copy, "./_build/default/lib/blockchain/scripts/extensions/repair",
             "bin/extensions/repair"},
         {copy, "./_build/default/lib/blockchain/scripts/extensions/sc", "bin/extensions/sc"},
-        {copy, "./scripts/extensions/info", "bin/extensions/info"}
+        {copy, "./scripts/extensions/info", "bin/extensions/info"},
+        {copy, "./scripts/extensions/config", "bin/extensions/config"}
     ]},
     {extended_start_script_hooks, [
         {post_start, [
@@ -88,7 +89,8 @@
         {txn, "extensions/txn"},
         {repair, "extensions/repair"},
         {sc, "extensions/sc"},
-        {info, "extensions/info"}
+        {info, "extensions/info"},
+        {config, "extensions/config"}
     ]}
 ]}.
 
