Add cowboy to rebar deps

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,8 @@
 ]}.
 
 {deps, [
-    {clique, ".*", {git, "https://github.com/helium/clique.git", {branch, "develop"}}},
+        {clique, ".*", {git, "https://github.com/helium/clique.git", {branch, "develop"}}},
+        {cowboy, {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
     {observer_cli, "1.6.0"},
     {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
