Mj/roaming spec (#110)
* allow an atom to identify the missed message

* add a raw_send to communicate with console when packets are not being transmitted

* Add a ws monitor worker

This allows the whole system to startup and not trigger the supervision
tree to crash everything if roaming-console cannot be reached.

Still todo: add a backoff, more configuration of startup

* remove active/inactive

If the websocket exists, we'll be sending over it.

* websocket manager has many ways to retry the connection

- during initialization via {continue}
- by hand via cast messages
- with a backoff via ! messages

Once the token is successfully retreived, the websocket connection will
be attempted.

* rename monitor -> manager

* shuffle some code around

- remove manager code
- add getting udpates from the ws_client

* rename ws_handler -> ws_client

* fix tests and converge on sane env var name

* get the auto join channels from the ws_worker

* doc and comment update

* appease the almight dialyzer

* keep the callback stuff in the handlers

a bit more redundant code, but feels more explicit.

* support http as an option in config

* bring helpers from router over until we have a lorawan-lib

* double duty lns as http lns

* add support for multiple protocols

initial implementation

* passing single gateway test

* start http_worker

handle multiple gateways selling the same packet

* handle default protocol type being binary

* update comment

* setup PRStartReq response

and let the test access the response body if it needs

* Add pp_location module

This module turns fetching a hotspots location into an async operation.
If it's immediately available, a process can have it.

If for some reason the location cannot be had,
- The chain is not available yet.
- The location is currently being fetched.
- The hotspot has no location.

the process will continue as if there is no location, but will 

--- a/.env-template
+++ b/.env-template
@@ -34,3 +34,8 @@ PP_NAT_EXTERNAL_IP=unset
 PP_NAT_EXTERNAL_PORT=2154
 PP_NAT_INTERNAL_IP=unset
 PP_NAT_INTERNAL_PORT=2154
+
+## Http Roaming downlinking
+PP_HTTP_DOWNLINK_PORT=8081
+## separate by comma to add more than one [ex: localhost,127.0.0.1]
+PP_HTTP_IP_LIST=localhost
