--- a/config/sys.config
+++ b/config/sys.config
@@ -13,7 +13,9 @@
         {sc_expiration_interval, 25},
         {sc_expiration_buffer, 15},
         {pp_metrics_file, "/var/data/pp_metrics.dat"},
-        {pp_routing_config_file, "/var/data/routing_config.json"}
+        {pp_routing_config_file, "/var/data/routing_config.json"},
+        {http_roaming_port, 8081},
+        {http_roaming_ip_list, ""}
     ]},
     {blockchain, [
         {port, 2154},
