--- a/config/test.config
+++ b/config/test.config
@@ -9,7 +9,9 @@
         {update_from_ws_config, true},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
-        {pp_routing_config_filename, testing}
+        {pp_routing_config_filename, testing},
+        {http_roaming_port, 3003},
+        {http_roaming_ip_list, "localhost,127.0.0.1"}
     ]},
     {blockchain, [
         {port, 2154}
