--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,8 @@
 
 {deps, [
     {clique, ".*", {git, "https://github.com/helium/clique.git", {branch, "develop"}}},
-    {cowboy, {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
+        {cowboy, {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
+        {cowlib, {git, "https://github.com/ninenines/cowlib.git", {tag, "2.11.0"}}},
     {observer_cli, "1.6.0"},
     {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
