--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
     {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
-    {lorawan, {git, "https://github.com/helium/erlang-lorawan.git", {branch, "develop"}}},
+    {erlang_lorawan, {git, "https://github.com/helium/erlang-lorawan.git", {branch, "develop"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
     {prometheus, "4.8.1"},
